--- a/index4.html
+++ b/index4.html
@@ -2,7 +2,7 @@
 <html lang="zh-Hant">
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
-<title>中↔韓 同聲傳譯（測試：原音+譯音都回傳給自己）</title>
+<title>中↔韓 同聲傳譯（本地即時原音＋伺服器譯音）</title>
 <style>
   body{font-family:system-ui,-apple-system,"Noto Sans TC","Microsoft JhengHei",Arial;padding:20px;max-width:980px;margin:auto}
   .row{display:flex;gap:10px;align-items:center;flex-wrap:wrap}
@@ -16,7 +16,7 @@
   .hint{color:#666;font-size:13px}
 </style>
 <body>
-  <h2>中↔韓 同聲傳譯（測試：原音+譯音都回傳給自己）</h2>
+  <h2>中↔韓 同聲傳譯（本地即時原音＋伺服器譯音）</h2>
 
   <div class="row">
     <label>名稱</label>
@@ -32,19 +32,19 @@
   </div>
 
   <div class="row" style="margin-top:10px">
-    <label class="inline"><input id="mute" type="checkbox"> 不送出麥克風</label>
-    <label class="inline"><input id="echo" type="checkbox" checked> 回聲抑制</label>
-    <label class="inline"><input id="ns"   type="checkbox" checked> 降噪</label>
-    <label class="inline"><input id="agc"  type="checkbox"> 自動增益</label>
+    <label><input id="mute" type="checkbox"> 不送出麥克風</label>
+    <label><input id="echo" type="checkbox" checked> 回聲抑制</label>
+    <label><input id="ns"   type="checkbox" checked> 降噪</label>
+    <label><input id="agc"  type="checkbox"> 自動增益</label>
     <span class="stat" id="tx">TX: 0 pkt/s</span>
   </div>
 
   <div class="row" style="margin-top:10px">
     <label for="micSel">麥克風</label>
     <select id="micSel"></select>
-    <label for="outSel">喇叭/耳機輸出</label>
+    <label for="outSel">輸出裝置</label>
     <select id="outSel"></select>
-    <span class="hint">AirPods：輸入選「Headset」，輸出選「Headphones」。</span>
+    <span class="hint">AirPods：輸入挑「Headset」；輸出挑「Headphones / 耳機」。</span>
   </div>
 
   <div class="logs" id="logs"></div>
@@ -54,41 +54,58 @@ const TUNNEL_HOST = "https://twenty-chose-src-keeps.trycloudflare.com";
 
 let ws=null, audioCtx=null, workletNode=null, spNode=null, stream=null, pingTimer=null, txTimer=null;
 let playQueue=[], playing=false, joined=false, txPkts=0;
+let micSource=null, loopbackEl=null;
 
-let micSource=null;
-let currentOutId = ""; // 指定播放輸出（TTS/原音回放）
+let devicesCache=[];
+let currentMicId = "";
+let currentOutId = ""; // 統一所有聲音的輸出（原音迴放 + 譯音播放）
 
-// 噪聲門（在主執行緒上對每個 20ms frame 做門控）
+// 噪聲門（上傳端）
 let gateOpen=false, gateHang=0;
-const GATE_OPEN_RMS  = 0.006;  // 開門閾值（歸一化）
-const GATE_CLOSE_RMS = 0.004;  // 關門閾值
-const GATE_HANG_FR   = 3;      // 關門後保留 N*20ms
+const GATE_OPEN_RMS  = 0.006;
+const GATE_CLOSE_RMS = 0.004;
+const GATE_HANG_FR   = 3;
 
 const $  = (s)=>document.querySelector(s);
 const log= (s)=>{ const el=$('#logs'); el.textContent+=s+"\n"; el.scrollTop=el.scrollHeight; };
 
-async function listDevices(){
-  try{
-    const devs = await navigator.mediaDevices.enumerateDevices();
-    const mics = devs.filter(d=>d.kind==="audioinput");
-    const outs = devs.filter(d=>d.kind==="audiooutput");
+async function refreshDevices(){
+  devicesCache = await navigator.mediaDevices.enumerateDevices();
+  const mics = devicesCache.filter(d=>d.kind==="audioinput");
+  const outs = devicesCache.filter(d=>d.kind==="audiooutput");
 
-    const micSel = $('#micSel'); micSel.innerHTML="";
-    mics.forEach(d=>{
-      const opt=document.createElement('option');
-      opt.value=d.deviceId; opt.textContent=d.label || `麥克風 (${d.deviceId.slice(0,6)}…)`;
-      micSel.appendChild(opt);
-    });
+  const micSel=$('#micSel'); micSel.innerHTML="";
+  mics.forEach(d=>{
+    const o=document.createElement('option');
+    o.value=d.deviceId; o.textContent=d.label || `麥克風(${d.deviceId.slice(0,6)}…)`;
+    micSel.appendChild(o);
+  });
 
-    const outSel = $('#outSel'); outSel.innerHTML="";
-    outs.forEach(d=>{
-      const opt=document.createElement('option');
-      opt.value=d.deviceId; opt.textContent=d.label || `輸出 (${d.deviceId.slice(0,6)}…)`;
-      outSel.appendChild(opt);
-    });
+  const outSel=$('#outSel'); outSel.innerHTML="";
+  outs.forEach(d=>{
+    const o=document.createElement('option');
+    o.value=d.deviceId; o.textContent=d.label || `輸出(${d.deviceId.slice(0,6)}…)`;
+    outSel.appendChild(o);
+  });
 
-    if (!currentOutId) currentOutId = outSel.value || "";
-  }catch(e){ log(`❌ 裝置列舉失敗：${e}`); }
+  if (currentMicId && [...micSel.options].some(o=>o.value===currentMicId)) micSel.value=currentMicId;
+  if (currentOutId && [...outSel.options].some(o=>o.value===currentOutId)) outSel.value=currentOutId;
+}
+
+function pickOutputForMic(micId){
+  const mic = devicesCache.find(d=>d.deviceId===micId && d.kind==="audioinput");
+  const outs = devicesCache.filter(d=>d.kind==="audiooutput");
+  if (!mic || outs.length===0) return;
+
+  // 先找同 groupId（藍牙耳機的 mic/output 會同組）
+  let cand = outs.filter(o=>o.groupId && mic.groupId && o.groupId===mic.groupId);
+  // 再優先帶有耳機關鍵字
+  const prefer = (d)=>/headphone|headset|airpods|buds|耳機|藍牙/i.test(d.label||"");
+  cand = cand.sort((a,b)=>(prefer(b)-prefer(a)));
+
+  const pick = cand[0] || outs[0];
+  currentOutId = pick.deviceId;
+  $('#outSel').value = currentOutId;
 }
 
 async function getMicStream(deviceId){
@@ -98,42 +115,56 @@ async function getMicStream(deviceId){
       channelCount:{ideal:1},
       sampleRate:  {ideal:48000},
       sampleSize:  {ideal:16},
-      echoCancellation: {ideal: true},
-      noiseSuppression: {ideal: true},
-      voiceIsolation:   {ideal: true}, // 支援的瀏覽器會套用
+      echoCancellation: {ideal: $('#echo').checked},
+      noiseSuppression: {ideal: $('#ns').checked},
+      voiceIsolation:   {ideal: true},
       autoGainControl:  $('#agc').checked ? {ideal:true} : {ideal:false}
     }
   };
   return await navigator.mediaDevices.getUserMedia(cts);
 }
 
-function stopStreamTracks(s){
-  try{ s && s.getTracks().forEach(t=>t.stop()); }catch(_){}
-}
+function stopStream(s){ try{ s && s.getTracks().forEach(t=>t.stop()); }catch(_){} }
 
 async function buildAudioPipeline(deviceId){
-  // 清舊鏈路（保留 WS）
+  // 清舊
   try{ workletNode && workletNode.disconnect(); }catch(_){}
   try{ spNode && spNode.disconnect(); }catch(_){}
-  stopStreamTracks(stream);
+  stopStream(stream);
   try{ audioCtx && await audioCtx.close(); }catch(_){}
 
+  // 新建
   audioCtx = new (window.AudioContext||window.webkitAudioContext)({sampleRate:48000});
   await audioCtx.resume().catch(()=>{});
 
-  // 指定你選的麥克風（不自動切回系統預設）
   stream = await getMicStream(deviceId);
   const info = stream.getAudioTracks()[0]?.getSettings?.() || {};
+  currentMicId = deviceId || (stream.getAudioTracks()[0]?.getCapabilities?.().deviceId) || "";
   log(`🎙️ mic：${(stream.getAudioTracks()[0]?.label)||'未知'} | 設定：${JSON.stringify(info)}`);
+
+  // 選輸出：若還沒指定，依麥克風自動挑同組輸出（AirPods 不再跳回內建喇叭）
+  if (!currentOutId) { await refreshDevices(); pickOutputForMic(currentMicId || $('#micSel').value); }
 
   micSource = audioCtx.createMediaStreamSource(stream);
 
-  // 上行：48k → 16k，高品質線性重取樣 + 20ms 封包
+  // 本地低延遲『原音』監聽（不經伺服器）
+  try{
+    if (loopbackEl) { try{ loopbackEl.pause(); }catch(_){ } }
+    loopbackEl = new Audio();
+    loopbackEl.autoplay = true;
+    loopbackEl.srcObject = stream;
+    if (typeof loopbackEl.setSinkId === 'function' && currentOutId) {
+      try { await loopbackEl.setSinkId(currentOutId); } catch(e){ log(`⚠️ 迴放輸出設定失敗：${e}`); }
+    }
+    await loopbackEl.play().catch(()=>{});
+  }catch(e){ log(`⚠️ 本地原音監聽失敗：${e}`); }
+
+  // 上傳：48k→16k 線性重取樣 + 20ms 封包 + 噪聲門
   try{
     if (audioCtx.audioWorklet) {
       const blobURL = URL.createObjectURL(new Blob([`
         class ResampleWorklet extends AudioWorkletProcessor {
-          constructor(){ super(); this.srcRate=sampleRate; this.dstRate=16000; this.buf=[]; }
+          constructor(){ super(); this.srcRate=sampleRate; this.dstRate=16000; }
           process(inputs){
             const i=inputs[0]; if(!i||!i[0]) return true;
             const x=i[0]; const ratio=this.srcRate/this.dstRate;
@@ -141,10 +172,9 @@ async function buildAudioPipeline(deviceId){
             const pcm=new Int16Array(outLen);
             for(let k=0;k<outLen;k++){
               const pos=k*ratio; const i0=Math.floor(pos); const i1=Math.min(i0+1, x.length-1);
-              const t=pos-i0; let s = x[i0]*(1-t) + x[i1]*t;  // 線性插值：低失真
+              const t=pos-i0; let s = x[i0]*(1-t) + x[i1]*t;
               s=Math.max(-1,Math.min(1,s)); pcm[k]=s<0?s*0x8000:s*0x7FFF;
             }
-            // 拆成 20ms@16k 的 320 樣本
             for(let off=0; off<pcm.length; off+=320){
               const sl=pcm.subarray(off, off+320);
               if(sl.length===320) this.port.postMessage(sl.buffer,[sl.buffer]);
@@ -156,17 +186,13 @@ async function buildAudioPipeline(deviceId){
       `], {type:'application/javascript'}));
       await audioCtx.audioWorklet.addModule(blobURL);
       workletNode = new AudioWorkletNode(audioCtx, 'resample-worklet');
-
-      // 主執行緒做 Noise Gate（避免把環境底噪送上去）
       workletNode.port.onmessage = (e)=>{
         const buf = new Int16Array(e.data);
-        // RMS（歸一化）
+        // Noise Gate
         let ss=0; for(let n=0;n<buf.length;n++){ const v=buf[n]/32768; ss+=v*v; }
         const rms = Math.sqrt(ss/buf.length);
-
         if (!gateOpen && rms >= GATE_OPEN_RMS) { gateOpen = true; gateHang = GATE_HANG_FR; }
         if (gateOpen && rms < GATE_CLOSE_RMS)   { gateHang = Math.max(0, gateHang-1); if (gateHang===0) gateOpen=false; }
-
         if (gateOpen || gateHang>0) {
           txPkts++;
           if(!$('#mute').checked && ws && ws.readyState===1){
@@ -174,26 +200,24 @@ async function buildAudioPipeline(deviceId){
           }
         }
       };
-
       micSource.connect(workletNode);
-      spNode = null;
+      spNode=null;
       log(`✅ Worklet 已啟用（ctxRate=${audioCtx.sampleRate}Hz）`);
     } else {
-      spNode = audioCtx.createScriptProcessor(2048, 1, 1);
+      spNode = audioCtx.createScriptProcessor(2048,1,1);
       spNode.onaudioprocess = (ev)=>{
-        const ch = ev.inputBuffer.getChannelData(0);
-        const ratio = 48000/16000;
-        const outLen = Math.floor(ch.length/ratio);
-        const pcm = new Int16Array(outLen);
+        const ch=ev.inputBuffer.getChannelData(0);
+        const ratio=48000/16000;
+        const outLen=Math.floor(ch.length/ratio);
+        const pcm=new Int16Array(outLen);
         for(let k=0;k<outLen;k++){
           const pos=k*ratio; const i0=Math.floor(pos); const i1=Math.min(i0+1, ch.length-1);
           const t=pos-i0; let s = ch[i0]*(1-t) + ch[i1]*t;
-          s=Math.max(-1,Math.min(1,s)); pcm[k] = s<0 ? s*0x8000 : s*0x7FFF;
+          s=Math.max(-1,Math.min(1,s)); pcm[k]=s<0?s*0x8000:s*0x7FFF;
         }
         for(let off=0; off<pcm.length; off+=320){
           const sl=pcm.subarray(off, off+320);
           if(sl.length===320){
-            // Gate
             let ss=0; for(let n=0;n<sl.length;n++){ const v=sl[n]/32768; ss+=v*v; }
             const rms = Math.sqrt(ss/sl.length);
             if (!gateOpen && rms >= GATE_OPEN_RMS) { gateOpen = true; gateHang = GATE_HANG_FR; }
@@ -211,20 +235,18 @@ async function buildAudioPipeline(deviceId){
       workletNode=null;
       log(`✅ ScriptProcessor 已啟用（ctxRate=${audioCtx.sampleRate}Hz）`);
     }
-  }catch(e){
-    log(`⚠️ 上行節點錯誤：${e}`);
-  }
+  }catch(e){ log(`⚠️ 上傳節點錯誤：${e}`); }
 }
 
 function cleanupAll(){
   try{ workletNode && workletNode.disconnect(); }catch(_){}
   try{ spNode && spNode.disconnect(); }catch(_){}
-  stopStreamTracks(stream);
+  stopStream(stream);
   try{ audioCtx && audioCtx.close(); }catch(_){}
   try{ clearInterval(pingTimer); }catch(_){}
   try{ clearInterval(txTimer); }catch(_){}
-  workletNode=spNode=micSource=null;
-  audioCtx=stream=null; pingTimer=txTimer=null; txPkts=0;
+  workletNode=spNode=micSource=null; audioCtx=stream=null; pingTimer=txTimer=null; txPkts=0;
+  if (loopbackEl){ try{ loopbackEl.pause(); }catch(_){ } loopbackEl=null; }
   gateOpen=false; gateHang=0;
 }
 
@@ -238,9 +260,15 @@ function leave(){
 async function join(){
   if (joined) return;
 
-  // 先拿權限，才會有帶標籤的裝置清單
+  // 先拿權限，才有帶標籤的裝置
   try{ await navigator.mediaDevices.getUserMedia({audio:true}); }catch(_){}
-  await listDevices();
+  await refreshDevices();
+
+  // 若偵測到 AirPods，預選：mic=Headset / out=Headphones
+  const airMic = devicesCache.find(d=>d.kind==="audioinput"  && /airpods|headset/i.test(d.label||""));
+  const airOut = devicesCache.find(d=>d.kind==="audiooutput" && /airpods|headphone/i.test(d.label||""));
+  if (airMic) { currentMicId = airMic.deviceId; $('#micSel').value=currentMicId; }
+  if (airOut) { currentOutId = airOut.deviceId; $('#outSel').value=currentOutId; }
 
   const name = ($('#name').value || 'Guest').trim().slice(0,40);
   const srcLang = $('#srcLang').value;
@@ -294,17 +322,19 @@ async function playNext(){
   playing=true;
   const buf=playQueue.shift();
   const mime = sniffMime(buf);
+
+  // 這裡只會收到：別人的原音(WAV) + 全員的譯音(MP3)
+  // 你自己的原音改走本地 loopback，不靠伺服器回放
+
   const blob=new Blob([buf],{type:mime});
   const url=URL.createObjectURL(blob);
   const a=new Audio(url);
   a.autoplay = true;
-
-  // 指定播放輸出（含原音與TTS）
   if (typeof a.setSinkId === 'function' && currentOutId) {
     try { await a.setSinkId(currentOutId); } catch(e){ log(`⚠️ 設定播放輸出失敗：${e}`); }
   }
   a.onended=()=>{ URL.revokeObjectURL(url); playNext(); };
-  a.play().catch(()=>{ /* 使用者互動後自動播放才會成功 */ });
+  a.play().catch(()=>{});
 }
 
 $('#join').onclick = join;
@@ -312,32 +342,36 @@ $('#leave').onclick = leave;
 $('#mute').onchange = ()=>{ /* 本地阻擋上傳，不需通知伺服器 */ };
 
 $('#micSel').onchange = async ()=>{
-  if(!joined) return;
-  await buildAudioPipeline($('#micSel').value || undefined);
+  currentMicId = $('#micSel').value || "";
+  await refreshDevices();
+  pickOutputForMic(currentMicId);
+  await buildAudioPipeline(currentMicId);
 };
 
 $('#outSel').onchange = async ()=>{
   currentOutId = $('#outSel').value || "";
+  // 更新 loopback 的輸出
+  if (loopbackEl && typeof loopbackEl.setSinkId==='function' && currentOutId){
+    try{ await loopbackEl.setSinkId(currentOutId); }catch(e){ log(`⚠️ 迴放輸出切換失敗：${e}`); }
+  }
 };
 
-// 裝置插拔：只刷新清單，不自動換麥（除非你選的裝置消失）
 navigator.mediaDevices.addEventListener('devicechange', async ()=>{
-  const prevMic = $('#micSel').value;
-  const prevOut = $('#outSel').value;
-  await listDevices();
-  if (joined) {
-    const micStillHere = Array.from($('#micSel').options).some(o=>o.value===prevMic);
-    if (!micStillHere) {
-      await buildAudioPipeline($('#micSel').value || undefined); // 退回目前選單值
-    }
-    if ($('#outSel').value !== prevOut) {
-      currentOutId = $('#outSel').value || "";
-    }
+  const prevMic = currentMicId, prevOut = currentOutId;
+  await refreshDevices();
+  // 若原 mic 消失，退回目前選單第一個並重建
+  if (prevMic && !devicesCache.some(d=>d.kind==="audioinput" && d.deviceId===prevMic)) {
+    currentMicId = $('#micSel').value;
+    await buildAudioPipeline(currentMicId);
+  }
+  // 若 out 消失，自動依 mic 重新挑
+  if (prevOut && !devicesCache.some(d=>d.kind==="audiooutput" && d.deviceId===prevOut)) {
+    pickOutputForMic(currentMicId || $('#micSel').value);
   }
 });
 
-// 初次載入：拿權限→列裝置
-(async ()=>{ try{ await navigator.mediaDevices.getUserMedia({audio:true}); }catch(_){}; await listDevices(); })();
+// 首次：拿權限→列裝置
+(async ()=>{ try{ await navigator.mediaDevices.getUserMedia({audio:true}); }catch(_){ } await refreshDevices(); })();
 </script>
 </body>
 </html>
