--- a/index4.html
+++ b/index4.html
@@ -50,6 +50,17 @@
   <div class="logs" id="logs"></div>
 
 <script>
+/*
+ 前端主要改動說明：
+ - 本地監聽不直接用原始 stream，先經過 HP (100Hz) + LP (8000Hz) + Compressor，再送到 mediaStreamDestination 供 <audio> loopback 使用。
+ - 本地 loopback 會根據 gate（由上傳的 rms 決定）自動 mute/unmute，避免打字聲被回放。
+ - 上傳採 48k -> 16k 線性重取樣，並使用 gate 閾值 (GATE_OPEN_RMS / CLOSE) 來避免鍵盤/環境音上傳。
+ 可調參數：
+  - GATE_OPEN_RMS (預設 0.006) -> 調大可減少把較弱聲音（例如鍵盤）當成語音上傳
+  - GATE_CLOSE_RMS (預設 0.004)
+  - HP_FREQ (預設 120) / LP_FREQ (預設 8000) / COMPRESSOR settings
+*/
+
 const TUNNEL_HOST = "https://twenty-chose-src-keeps.trycloudflare.com";
 
 let ws=null, audioCtx=null, workletNode=null, spNode=null, stream=null, pingTimer=null, txTimer=null;
@@ -58,13 +69,14 @@ let micSource=null, loopbackEl=null;
 
 let devicesCache=[];
 let currentMicId = "";
-let currentOutId = ""; // 統一所有聲音的輸出（原音迴放 + 譯音播放）
+let currentOutId = "";
 
-// 噪聲門（上傳端）
-let gateOpen=false, gateHang=0;
-const GATE_OPEN_RMS  = 0.006;
+// GATE / filter params (可微調)
+const GATE_OPEN_RMS  = 0.006;  // 增大: 更難開門 -> 才上傳/才監聽（減少鍵盤）
 const GATE_CLOSE_RMS = 0.004;
-const GATE_HANG_FR   = 3;
+const GATE_HANG_FR   = 3;      // 門關閉前保留幾個 frame
+const HP_FREQ = 120;           // high-pass cutoff (Hz)
+const LP_FREQ = 8000;          // low-pass cutoff (Hz)
 
 const $  = (s)=>document.querySelector(s);
 const log= (s)=>{ const el=$('#logs'); el.textContent+=s+"\n"; el.scrollTop=el.scrollHeight; };
@@ -96,13 +108,9 @@ function pickOutputForMic(micId){
   const mic = devicesCache.find(d=>d.deviceId===micId && d.kind==="audioinput");
   const outs = devicesCache.filter(d=>d.kind==="audiooutput");
   if (!mic || outs.length===0) return;
-
-  // 先找同 groupId（藍牙耳機的 mic/output 會同組）
   let cand = outs.filter(o=>o.groupId && mic.groupId && o.groupId===mic.groupId);
-  // 再優先帶有耳機關鍵字
   const prefer = (d)=>/headphone|headset|airpods|buds|耳機|藍牙/i.test(d.label||"");
-  cand = cand.sort((a,b)=>(prefer(b)-prefer(a)));
-
+  cand = cand.sort((a,b)=> (prefer(b.label||"")?1:0) - (prefer(a.label||"")?1:0));
   const pick = cand[0] || outs[0];
   currentOutId = pick.deviceId;
   $('#outSel').value = currentOutId;
@@ -142,24 +150,55 @@ async function buildAudioPipeline(deviceId){
   currentMicId = deviceId || (stream.getAudioTracks()[0]?.getCapabilities?.().deviceId) || "";
   log(`🎙️ mic：${(stream.getAudioTracks()[0]?.label)||'未知'} | 設定：${JSON.stringify(info)}`);
 
-  // 選輸出：若還沒指定，依麥克風自動挑同組輸出（AirPods 不再跳回內建喇叭）
   if (!currentOutId) { await refreshDevices(); pickOutputForMic(currentMicId || $('#micSel').value); }
 
   micSource = audioCtx.createMediaStreamSource(stream);
 
-  // 本地低延遲『原音』監聽（不經伺服器）
-  try{
-    if (loopbackEl) { try{ loopbackEl.pause(); }catch(_){ } }
+  // 建立處理用濾波 + 壓縮器 -> 產生 processed stream 給 loopback
+  try {
+    const hp = audioCtx.createBiquadFilter(); hp.type='highpass'; hp.frequency.value = HP_FREQ;
+    const lp = audioCtx.createBiquadFilter(); lp.type='lowpass'; lp.frequency.value = LP_FREQ;
+    const comp = audioCtx.createDynamicsCompressor();
+    comp.threshold.value = -40;
+    comp.knee.value = 5;
+    comp.ratio.value = 6;
+    comp.attack.value = 0.01;
+    comp.release.value = 0.25;
+
+    const dest = audioCtx.createMediaStreamDestination();
+    micSource.connect(hp);
+    hp.connect(lp);
+    lp.connect(comp);
+    comp.connect(dest);
+
+    // 用處理過的 stream 當本地 loopback，並嘗試 setSinkId 到你選的輸出裝置
+    if (loopbackEl){ try{ loopbackEl.pause(); }catch(_){ } }
     loopbackEl = new Audio();
     loopbackEl.autoplay = true;
-    loopbackEl.srcObject = stream;
+    loopbackEl.srcObject = dest.stream;
     if (typeof loopbackEl.setSinkId === 'function' && currentOutId) {
       try { await loopbackEl.setSinkId(currentOutId); } catch(e){ log(`⚠️ 迴放輸出設定失敗：${e}`); }
     }
+    // 先 muted，等偵測到說話才 unmute（減少鍵盤回音）
+    loopbackEl.muted = true;
     await loopbackEl.play().catch(()=>{});
-  }catch(e){ log(`⚠️ 本地原音監聽失敗：${e}`); }
+  } catch(e){
+    log(`⚠️ 本地處理/監聽建立失敗：${e}`);
+    // fallback: 直接 loop 原始 stream（仍嘗試 setSinkId）
+    try {
+      if (loopbackEl){ try{ loopbackEl.pause(); }catch(_){ } }
+      loopbackEl = new Audio();
+      loopbackEl.autoplay = true;
+      loopbackEl.srcObject = stream;
+      if (typeof loopbackEl.setSinkId === 'function' && currentOutId) {
+        try { await loopbackEl.setSinkId(currentOutId); } catch(e){ log(`⚠️ 迴放輸出設定失敗：${e}`); }
+      }
+      loopbackEl.muted = false;
+      await loopbackEl.play().catch(()=>{});
+    } catch(_) {}
+  }
 
-  // 上傳：48k→16k 線性重取樣 + 20ms 封包 + 噪聲門
+  // 上傳 node（48k -> 16k）: 用 worklet 或 fallback ScriptProcessor
   try{
     if (audioCtx.audioWorklet) {
       const blobURL = URL.createObjectURL(new Blob([`
@@ -186,14 +225,19 @@ async function buildAudioPipeline(deviceId){
       `], {type:'application/javascript'}));
       await audioCtx.audioWorklet.addModule(blobURL);
       workletNode = new AudioWorkletNode(audioCtx, 'resample-worklet');
+      let gateOpen=false, gateHang=0;
       workletNode.port.onmessage = (e)=>{
         const buf = new Int16Array(e.data);
-        // Noise Gate
         let ss=0; for(let n=0;n<buf.length;n++){ const v=buf[n]/32768; ss+=v*v; }
         const rms = Math.sqrt(ss/buf.length);
+        // gate logic (上傳)
         if (!gateOpen && rms >= GATE_OPEN_RMS) { gateOpen = true; gateHang = GATE_HANG_FR; }
-        if (gateOpen && rms < GATE_CLOSE_RMS)   { gateHang = Math.max(0, gateHang-1); if (gateHang===0) gateOpen=false; }
-        if (gateOpen || gateHang>0) {
+        if (gateOpen && rms < GATE_CLOSE_RMS) { gateHang = Math.max(0, gateHang-1); if (gateHang===0) gateOpen=false; }
+        // 控制本地 loopback mute/unmute（只在說話時打開監聽）
+        if (loopbackEl) {
+          try { loopbackEl.muted = !gateOpen; } catch(_) {}
+        }
+        if (gateOpen) {
           txPkts++;
           if(!$('#mute').checked && ws && ws.readyState===1){
             ws.send(buf.buffer);
@@ -205,6 +249,7 @@ async function buildAudioPipeline(deviceId){
       log(`✅ Worklet 已啟用（ctxRate=${audioCtx.sampleRate}Hz）`);
     } else {
       spNode = audioCtx.createScriptProcessor(2048,1,1);
+      let gateOpen=false, gateHang=0;
       spNode.onaudioprocess = (ev)=>{
         const ch=ev.inputBuffer.getChannelData(0);
         const ratio=48000/16000;
@@ -222,7 +267,10 @@ async function buildAudioPipeline(deviceId){
             const rms = Math.sqrt(ss/sl.length);
             if (!gateOpen && rms >= GATE_OPEN_RMS) { gateOpen = true; gateHang = GATE_HANG_FR; }
             if (gateOpen && rms < GATE_CLOSE_RMS)   { gateHang = Math.max(0, gateHang-1); if (gateHang===0) gateOpen=false; }
-            if (gateOpen || gateHang>0) {
+            if (loopbackEl) {
+              try { loopbackEl.muted = !gateOpen; } catch(_) {}
+            }
+            if (gateOpen) {
               txPkts++;
               if(!$('#mute').checked && ws && ws.readyState===1){
                 ws.send(sl.buffer);
@@ -247,7 +295,6 @@ function cleanupAll(){
   try{ clearInterval(txTimer); }catch(_){}
   workletNode=spNode=micSource=null; audioCtx=stream=null; pingTimer=txTimer=null; txPkts=0;
   if (loopbackEl){ try{ loopbackEl.pause(); }catch(_){ } loopbackEl=null; }
-  gateOpen=false; gateHang=0;
 }
 
 function leave(){
@@ -259,12 +306,9 @@ function leave(){
 
 async function join(){
   if (joined) return;
-
-  // 先拿權限，才有帶標籤的裝置
   try{ await navigator.mediaDevices.getUserMedia({audio:true}); }catch(_){}
   await refreshDevices();
 
-  // 若偵測到 AirPods，預選：mic=Headset / out=Headphones
   const airMic = devicesCache.find(d=>d.kind==="audioinput"  && /airpods|headset/i.test(d.label||""));
   const airOut = devicesCache.find(d=>d.kind==="audiooutput" && /airpods|headphone/i.test(d.label||""));
   if (airMic) { currentMicId = airMic.deviceId; $('#micSel').value=currentMicId; }
@@ -290,6 +334,7 @@ async function join(){
 
   ws.onmessage = (ev)=>{
     if(ev.data instanceof ArrayBuffer){
+      log(`⤵️ 收到 audio bytes len=${ev.data.byteLength}`);
       playQueue.push(ev.data);
       if(!playing) playNext();
       return;
@@ -301,6 +346,7 @@ async function join(){
       if(o.type==="final")   log(`✅ ${o.from}（${o.dir}）\n原文：${o.text}\n翻譯：${o.mt}`);
       if(o.type==="mute")    log(`🔇 ${o.name} ${o.muted?"已靜音":"取消靜音"}`);
       if(o.type==="error")   log(`❌ ${o.msg}`);
+      if(o.type==="debug")   log(`ℹ️ ${o.msg}`);
     }catch(_){}
   };
 
@@ -323,9 +369,6 @@ async function playNext(){
   const buf=playQueue.shift();
   const mime = sniffMime(buf);
 
-  // 這裡只會收到：別人的原音(WAV) + 全員的譯音(MP3)
-  // 你自己的原音改走本地 loopback，不靠伺服器回放
-
   const blob=new Blob([buf],{type:mime});
   const url=URL.createObjectURL(blob);
   const a=new Audio(url);
@@ -339,7 +382,7 @@ async function playNext(){
 
 $('#join').onclick = join;
 $('#leave').onclick = leave;
-$('#mute').onchange = ()=>{ /* 本地阻擋上傳，不需通知伺服器 */ };
+$('#mute').onchange = ()=>{ /* 本地阻擋上傳，不必通知伺服器 */ };
 
 $('#micSel').onchange = async ()=>{
   currentMicId = $('#micSel').value || "";
@@ -350,7 +393,6 @@ $('#micSel').onchange = async ()=>{
 
 $('#outSel').onchange = async ()=>{
   currentOutId = $('#outSel').value || "";
-  // 更新 loopback 的輸出
   if (loopbackEl && typeof loopbackEl.setSinkId==='function' && currentOutId){
     try{ await loopbackEl.setSinkId(currentOutId); }catch(e){ log(`⚠️ 迴放輸出切換失敗：${e}`); }
   }
@@ -359,12 +401,10 @@ $('#outSel').onchange = async ()=>{
 navigator.mediaDevices.addEventListener('devicechange', async ()=>{
   const prevMic = currentMicId, prevOut = currentOutId;
   await refreshDevices();
-  // 若原 mic 消失，退回目前選單第一個並重建
   if (prevMic && !devicesCache.some(d=>d.kind==="audioinput" && d.deviceId===prevMic)) {
     currentMicId = $('#micSel').value;
     await buildAudioPipeline(currentMicId);
   }
-  // 若 out 消失，自動依 mic 重新挑
   if (prevOut && !devicesCache.some(d=>d.kind==="audiooutput" && d.deviceId===prevOut)) {
     pickOutputForMic(currentMicId || $('#micSel').value);
   }
