--- a/index4.html
+++ b/index4.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
-  <title>中↔韓 同聲傳譯（本地即時原音＋伺服器譯音）</title>
+  <title>中↔韓 同聲傳譯（只播翻譯）</title>
   <style>
     body{font-family:system-ui,-apple-system,"Noto Sans TC","Microsoft JhengHei",Arial;padding:20px;max-width:980px;margin:auto}
     .row{display:flex;gap:10px;align-items:center;flex-wrap:wrap}
@@ -18,7 +18,7 @@
   </style>
 </head>
 <body>
-  <h2>中↔韓 同聲傳譯（本地即時原音＋伺服器譯音）</h2>
+  <h2>中↔韓 同聲傳譯（只播放翻譯，不回放原音）</h2>
 
   <div class="row">
     <label>名稱</label>
@@ -35,41 +35,29 @@
 
   <div class="row" style="margin-top:10px">
     <label><input id="mute" type="checkbox"> 不送出麥克風</label>
-    <label><input id="echo" type="checkbox" checked> 回聲抑制</label>
-    <label><input id="ns"   type="checkbox" checked> 降噪</label>
-    <label><input id="agc"  type="checkbox" checked> 自動增益</label>
-    <span class="stat" id="tx">TX: 0 pkt/s</span>
-  </div>
-
-  <div class="row" style="margin-top:10px">
     <label for="micSel">麥克風</label>
     <select id="micSel"></select>
     <label for="outSel">輸出裝置</label>
     <select id="outSel"></select>
     <button id="pickOut">選擇輸出喇叭</button>
-    <span class="hint">建議：輸入用內建/USB 麥，輸出用 AirPods Stereo（避免耳機被迫進通話模式）。</span>
+    <span class="stat" id="tx">TX: 0 pkt/s</span>
   </div>
 
   <div class="logs" id="logs"></div>
 
 <script>
-/* 連線位址（請改成你當前的 trycloudflare 網址） */
+/* 換成你的 trycloudflare 網址 */
 const TUNNEL_HOST = "https://cleaners-fridge-mineral-appearance.trycloudflare.com";
 
 let ws=null, audioCtx=null, workletNode=null, spNode=null, stream=null, pingTimer=null, txTimer=null;
 let playQueue=[], playing=false, joined=false, txPkts=0;
-let micSource=null, loopbackEl=null, nullGain=null;
+let micSource=null;
+let devicesCache=[], currentMicId="", currentOutId="";
 
-let devicesCache=[];
-let currentMicId = "";
-let currentOutId = "";
-
-// 語音門檻（較靈敏）
-const GATE_OPEN_RMS  = 0.0025;
-const GATE_CLOSE_RMS = 0.0018;
+// gate 比較靈敏 → 說話就送
+const GATE_OPEN_RMS  = 0.0022;
+const GATE_CLOSE_RMS = 0.0016;
 const GATE_HANG_FR   = 4;
-const HP_FREQ = 120;
-const LP_FREQ = 8000;
 
 const $  = (s)=>document.querySelector(s);
 const log= (s)=>{ const el=$('#logs'); el.textContent+=s+"\n"; el.scrollTop=el.scrollHeight; };
@@ -104,10 +92,10 @@ async function getMicStream(deviceId){
       channelCount:{ideal:1},
       sampleRate:  {ideal:48000},
       sampleSize:  {ideal:16},
-      echoCancellation: {ideal: $('#echo').checked},
-      noiseSuppression: {ideal: $('#ns').checked},
+      echoCancellation: {ideal: true},
+      noiseSuppression: {ideal: true},
       voiceIsolation:   {ideal: true},
-      autoGainControl:  $('#agc').checked ? {ideal:true} : {ideal:false},
+      autoGainControl:  {ideal: true},
       latency: {ideal: 0.01}
     }
   };
@@ -117,20 +105,13 @@ async function getMicStream(deviceId){
 function stopStream(s){ try{ s && s.getTracks().forEach(t=>t.stop()); }catch(_){} }
 
 async function buildAudioPipeline(deviceId){
-  // 清舊
   try{ workletNode && workletNode.disconnect(); }catch(_){}
   try{ spNode && spNode.disconnect(); }catch(_){}
   stopStream(stream);
   try{ audioCtx && await audioCtx.close(); }catch(_){}
 
-  // 新建
   audioCtx = new (window.AudioContext||window.webkitAudioContext)({sampleRate:48000});
   await audioCtx.resume().catch(()=>{});
-
-  // 無聲輸出節點（用來“拉動”整個圖）
-  nullGain = audioCtx.createGain();
-  nullGain.gain.value = 0.0;
-  nullGain.connect(audioCtx.destination);
 
   stream = await getMicStream(deviceId);
   const info = stream.getAudioTracks()[0]?.getSettings?.() || {};
@@ -139,41 +120,7 @@ async function buildAudioPipeline(deviceId){
 
   micSource = audioCtx.createMediaStreamSource(stream);
 
-  // 本地監聽：HP -> LP -> Compressor -> mediaStreamDestination
-  try {
-    const hp = audioCtx.createBiquadFilter(); hp.type='highpass'; hp.frequency.value = HP_FREQ;
-    const lp = audioCtx.createBiquadFilter(); lp.type='lowpass'; lp.frequency.value = LP_FREQ;
-    const comp = audioCtx.createDynamicsCompressor();
-    comp.threshold.value = -40; comp.knee.value = 5; comp.ratio.value = 6; comp.attack.value = 0.01; comp.release.value = 0.25;
-
-    const dest = audioCtx.createMediaStreamDestination();
-    micSource.connect(hp); hp.connect(lp); lp.connect(comp); comp.connect(dest);
-
-    if (loopbackEl){ try{ loopbackEl.pause(); }catch(_){ } }
-    loopbackEl = new Audio();
-    loopbackEl.autoplay = true;
-    loopbackEl.srcObject = dest.stream;
-    loopbackEl.muted = true; // 語音門檻開時再開聲
-    if (typeof loopbackEl.setSinkId === 'function' && currentOutId) {
-      try { await loopbackEl.setSinkId(currentOutId); } catch(e){ log(`⚠️ 迴放輸出設定失敗：${e}`); }
-    }
-    await loopbackEl.play().catch(()=>{});
-  } catch(e){
-    log(`⚠️ 本地監聽建立失敗：${e}`);
-    try {
-      if (loopbackEl){ try{ loopbackEl.pause(); }catch(_){ } }
-      loopbackEl = new Audio();
-      loopbackEl.autoplay = true;
-      loopbackEl.srcObject = stream;
-      loopbackEl.muted = false;
-      if (typeof loopbackEl.setSinkId === 'function' && currentOutId) {
-        try { await loopbackEl.setSinkId(currentOutId); } catch(e){ log(`⚠️ 迴放輸出設定失敗：${e}`); }
-      }
-      await loopbackEl.play().catch(()=>{});
-    } catch(_) {}
-  }
-
-  // 上傳：AudioWorklet（含累積到 320 取樣）
+  // 上傳：AudioWorklet with accumulate 320 samples
   try{
     if (audioCtx.audioWorklet) {
       const blobURL = URL.createObjectURL(new Blob([`
@@ -183,14 +130,12 @@ async function buildAudioPipeline(deviceId){
             this.dstRate = 16000;
             this.ratio   = sampleRate / this.dstRate;
             this.phase   = 0;
-            this.acc     = []; // 累積 Int16
+            this.acc     = [];
           }
           process(inputs){
             const i = inputs[0];
             if (!i || !i[0]) return true;
             const x = i[0];
-
-            // 逐點線性插值下採樣
             for (; this.phase < x.length; this.phase += this.ratio){
               const i0 = Math.floor(this.phase);
               const i1 = Math.min(i0 + 1, x.length - 1);
@@ -199,10 +144,7 @@ async function buildAudioPipeline(deviceId){
               s = Math.max(-1, Math.min(1, s));
               this.acc.push(s < 0 ? s * 0x8000 : s * 0x7FFF);
             }
-            // 保留小數相位至下次
             this.phase -= x.length;
-
-            // 每 320 丟一包
             while (this.acc.length >= 320){
               const chunk = new Int16Array(this.acc.slice(0,320));
               this.acc = this.acc.slice(320);
@@ -215,20 +157,15 @@ async function buildAudioPipeline(deviceId){
       `], {type:'application/javascript'}));
       await audioCtx.audioWorklet.addModule(blobURL);
       workletNode = new AudioWorkletNode(audioCtx, 'resample-worklet');
-      // 讓節點被“拉動”
-      workletNode.connect(nullGain);
 
       let gateOpen=false, gateHang=0;
       workletNode.port.onmessage = (e)=>{
         const buf = new Int16Array(e.data);
-        // 計算 RMS 供 gate
         let ss=0; for(let n=0;n<buf.length;n++){ const v=buf[n]/32768; ss+=v*v; }
         const rms = Math.sqrt(ss/buf.length);
 
         if (!gateOpen && rms >= GATE_OPEN_RMS) { gateOpen = true; gateHang = GATE_HANG_FR; }
         if (gateOpen && rms < GATE_CLOSE_RMS)   { gateHang = Math.max(0, gateHang-1); if (gateHang===0) gateOpen=false; }
-
-        if (loopbackEl) { try{ loopbackEl.muted = !gateOpen; }catch(_){} }
 
         if (gateOpen) {
           txPkts++;
@@ -238,10 +175,9 @@ async function buildAudioPipeline(deviceId){
         }
       };
       micSource.connect(workletNode);
-      spNode=null;
       log(`✅ Worklet 已啟用（ctxRate=${audioCtx.sampleRate}Hz）`);
     } else {
-      // Fallback: ScriptProcessor，也做累積
+      // Fallback
       spNode = audioCtx.createScriptProcessor(2048,1,1);
       let gateOpen=false, gateHang=0;
       let acc = new Int16Array(0);
@@ -249,8 +185,6 @@ async function buildAudioPipeline(deviceId){
       spNode.onaudioprocess = (ev)=>{
         const ch=ev.inputBuffer.getChannelData(0);
         const ratio = 48000/16000;
-
-        // 重採樣 + 累積
         const outLen=Math.floor(ch.length/ratio);
         const tmp = new Int16Array(outLen);
         for(let k=0;k<outLen;k++){
@@ -258,25 +192,19 @@ async function buildAudioPipeline(deviceId){
           const t=pos-i0; let s = ch[i0]*(1-t) + ch[i1]*t;
           s=Math.max(-1,Math.min(1,s)); tmp[k]=s<0?s*0x8000:s*0x7FFF;
         }
-        // 併入 acc
+        // accumulate
         if (acc.length===0){ acc = tmp; } else {
           const merged = new Int16Array(acc.length + tmp.length);
           merged.set(acc,0); merged.set(tmp, acc.length);
           acc = merged;
         }
-
-        // 每 320 丟（含 gate）
         while (acc.length >= 320){
           const sl = acc.slice(0,320);
           acc = acc.slice(320);
-
           let ss=0; for(let n=0;n<sl.length;n++){ const v=sl[n]/32768; ss+=v*v; }
           const rms = Math.sqrt(ss/sl.length);
           if (!gateOpen && rms >= GATE_OPEN_RMS) { gateOpen = true; gateHang = GATE_HANG_FR; }
           if (gateOpen && rms < GATE_CLOSE_RMS)   { gateHang = Math.max(0, gateHang-1); if (gateHang===0) gateOpen=false; }
-
-          if (loopbackEl) { try{ loopbackEl.muted = !gateOpen; }catch(_){} }
-
           if (gateOpen) {
             txPkts++;
             if(!$('#mute').checked && ws && ws.readyState===1){
@@ -286,8 +214,6 @@ async function buildAudioPipeline(deviceId){
         }
       };
       micSource.connect(spNode);
-      spNode.connect(nullGain);
-      workletNode=null;
       log(`✅ ScriptProcessor 已啟用（ctxRate=${audioCtx.sampleRate}Hz）`);
     }
   }catch(e){ log(`⚠️ 上傳節點錯誤：${e}`); }
@@ -301,8 +227,6 @@ function cleanupAll(){
   try{ clearInterval(pingTimer); }catch(_){}
   try{ clearInterval(txTimer); }catch(_){}
   workletNode=spNode=micSource=null; audioCtx=stream=null; pingTimer=txTimer=null; txPkts=0;
-  if (loopbackEl){ try{ loopbackEl.pause(); }catch(_){ } loopbackEl=null; }
-  nullGain=null;
 }
 
 function leave(){
@@ -334,10 +258,18 @@ async function join(){
     pingTimer = setInterval(()=>{ try{ ws.send(JSON.stringify({type:"ping"})); }catch(_){ } }, 20000);
   };
 
-  ws.onmessage = (ev)=>{
+  ws.onmessage = async (ev)=>{
     if(ev.data instanceof ArrayBuffer){
-      playQueue.push(ev.data);
-      if(!playing) playNext();
+      // 收到的只會是「翻譯 MP3」
+      const blob=new Blob([ev.data],{type:'audio/mpeg'});
+      const url=URL.createObjectURL(blob);
+      const a=new Audio(url);
+      a.autoplay = true;
+      if (typeof a.setSinkId === 'function' && currentOutId) {
+        try { await a.setSinkId(currentOutId); } catch(e){ log(`⚠️ 設定播放輸出失敗：${e}`); }
+      }
+      a.onended=()=>{ URL.revokeObjectURL(url); };
+      a.play().catch(()=>{});
       return;
     }
     try{
@@ -353,75 +285,37 @@ async function join(){
   ws.onclose = ()=>{ log("連線關閉"); leave(); };
 }
 
-function sniffMime(buf){
-  if (buf.byteLength >= 12){
-    const dv = new DataView(buf);
-    const riff = String.fromCharCode(dv.getUint8(0),dv.getUint8(1),dv.getUint8(2),dv.getUint8(3));
-    const wave = String.fromCharCode(dv.getUint8(8),dv.getUint8(9),dv.getUint8(10),dv.getUint8(11));
-    if (riff === 'RIFF' && wave === 'WAVE') return 'audio/wav';
-  }
-  return 'audio/mpeg';
-}
-
-async function playNext(){
-  if(playQueue.length===0){ playing=false; return; }
-  playing=true;
-  const buf=playQueue.shift();
-  const mime = sniffMime(buf);
-
-  const blob=new Blob([buf],{type:mime});
-  const url=URL.createObjectURL(blob);
-  const a=new Audio(url);
-  a.autoplay = true;
-  if (typeof a.setSinkId === 'function' && currentOutId) {
-    try { await a.setSinkId(currentOutId); } catch(e){ log(`⚠️ 設定播放輸出失敗：${e}`); }
-  }
-  a.onended=()=>{ URL.revokeObjectURL(url); playNext(); };
-  a.play().catch(()=>{});
-}
-
-/* 事件綁定 */
-$('#join').onclick = join;
-$('#leave').onclick = leave;
-$('#mute').onchange = ()=>{ /* 本地阻擋上傳，不必通知伺服器 */ };
-
+/* 輸入 / 輸出切換 */
 $('#micSel').onchange = async ()=>{
   currentMicId = $('#micSel').value || "";
   await buildAudioPipeline(currentMicId);
 };
-
 $('#outSel').onchange = async ()=>{
   currentOutId = $('#outSel').value || "";
-  if (loopbackEl && typeof loopbackEl.setSinkId==='function' && currentOutId){
-    try{ await loopbackEl.setSinkId(currentOutId); }catch(e){ log(`⚠️ 迴放輸出切換失敗：${e}`); }
-  }
 };
-
 $('#pickOut').onclick = async ()=>{
   try{
     if (navigator.mediaDevices.selectAudioOutput) {
       const out = await navigator.mediaDevices.selectAudioOutput();
       if (out && out.deviceId) {
         currentOutId = out.deviceId;
-        if (loopbackEl?.setSinkId) await loopbackEl.setSinkId(currentOutId);
         log(`🔈 以後輸出到: ${out.label || currentOutId}`);
-        await refreshDevices(); // 更新下拉
+        await refreshDevices();
         const outSel=$('#outSel');
         if ([...outSel.options].some(o=>o.value===currentOutId)) outSel.value=currentOutId;
       }
     } else {
-      log('⚠️ 瀏覽器不支援 selectAudioOutput()，請用下拉選單 + setSinkId。');
+      log('⚠️ 瀏覽器不支援 selectAudioOutput()，請用下拉選單選擇輸出。');
     }
-  }catch(e){
-    log(`❌ 選擇輸出失敗: ${e}`);
-  }
+  }catch(e){ log(`❌ 選擇輸出失敗: ${e}`); }
 };
 
-navigator.mediaDevices.addEventListener('devicechange', async ()=>{
-  await refreshDevices();
-});
+/* 其他控制 */
+$('#join').onclick = join;
+$('#leave').onclick = leave;
+$('#mute').onchange = ()=>{ /* 只在本地阻擋上傳 */ };
 
-// 首次：拿權限→列裝置
+navigator.mediaDevices.addEventListener('devicechange', async ()=>{ await refreshDevices(); });
 (async ()=>{ try{ await navigator.mediaDevices.getUserMedia({audio:true}); }catch(_){ } await refreshDevices(); })();
 </script>
 </body>
